--- a/HW1_CLI/build.gradle
+++ b/HW1_CLI/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
+    compile group: 'com.beust', name: 'jcommander', version: '1.72'
 }
