--- a/HW1_CLI/build.gradle
+++ b/HW1_CLI/build.gradle
@@ -5,7 +5,7 @@ plugins {
 group 'ru.hse.nikiforovskaya'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.9
 
 repositories {
     mavenCentral()
@@ -13,4 +13,10 @@ repositories {
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'ru.hse.nikiforovskaya.Interpreter'
+    }
 }
