--- a/HW1_CLI/build.gradle
+++ b/HW1_CLI/build.gradle
@@ -5,18 +5,24 @@ plugins {
 group 'ru.hse.nikiforovskaya'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.9
+sourceCompatibility = 1.11
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
+    testCompile("org.junit.jupiter:junit-jupiter-api:5.0.1")
 }
 
 jar {
     manifest {
         attributes 'Main-Class': 'ru.hse.nikiforovskaya.Interpreter'
+    }
+}
+
+test {
+    testLogging {
+        events 'started', 'passed'
     }
 }
