fixed all comands behavior except external

--- a/HW1_CLI/build.gradle
+++ b/HW1_CLI/build.gradle
@@ -13,4 +13,7 @@ repositories {
 
 dependencies {
     testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.0.1'
+    // https://mvnrepository.com/artifact/org.jetbrains/annotations
+    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
+
 }
